# app-examples-python

./: .gitignore  LICENSE  README.md
examples/chem-sync-local-flask/: .gitignore  Dockerfile  Dockerfile.localtunnel  README.md  WORKSHOP.md  dev_requirements.txt  docker-compose.ngrok.yaml  docker-compose.yaml  manifest.yaml  pip_requirements.txt  pyproject.toml  requirements.in  requirements.txt  ruff.toml  update_env
examples/chem-sync-local-flask/.devcontainer/: devcontainer.json
examples/chem-sync-local-flask/local_app/: app.py  benchling_app_setup.py  bootstrap.py  handler.py  molecules.py  pub_chem.py
examples/chem-sync-local-flask/local_app/benchling_app/: canvas_interaction.py  handler.py  molecules.py  setup.py
examples/chem-sync-local-flask/local_app/benchling_app/views/: archived.py  canvas_initialize.py  chemical_preview.py  completed.py  constants.py
examples/chem-sync-local-flask/local_app/lib/: logger.py  pub_chem.py
examples/chem-sync-local-flask/local_app/views/: canvas_initialize.py  canvas_interaction.py  chemical_preview.py  completed.py  constants.py
examples/chem-sync-local-flask/tests/: helpers.py
examples/chem-sync-local-flask/tests/files/pubchem/: synonyms.json
examples/chem-sync-local-flask/tests/files/webhooks/: canvas_initialize_webhook.json  canvas_interaction_webhook.json
examples/chem-sync-local-flask/tests/unit/local_app/: test_app.py
examples/chem-sync-local-flask/tests/unit/local_app/benchling_app/: test_canvas_interaction.py  test_handler.py  test_molecules.py  test_setup.py
examples/custom-code-AD/: README.md  (+1 more)
(+81 files in other folders)
