[project]
requires-python = ">=3.11"
name = "local-app"
version = "1.0.0"
dynamic = ["dependencies", "optional-dependencies"]

[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.in"] }
optional-dependencies.test = { file = ["requirements-test.txt"] }

[tool.ruff]
line-length = 110